fix wrapping of parents table in FireFox

--- a/src/main/webapp/assets/styles/nu/mine/mosher/genealogy/layout.css
+++ b/src/main/webapp/assets/styles/nu/mine/mosher/genealogy/layout.css
@@ -27,3 +27,7 @@
 .layout-right {
     float: right;
 }
+
+.layout-wide {
+    width: 100%;
+}
